--- a/src/Frontend/CleanArchitecture.Client/Components/Pages/Home.razor
+++ b/src/Frontend/CleanArchitecture.Client/Components/Pages/Home.razor
@@ -71,8 +71,8 @@
 
 <div class="container mb-5">
     <header class="header mt-3">
-        <h1>EVENT*SPHERE</h1>  <hr />
-        <img src="images/home.jpg" alt="Computer showing code">
+        <h1>Välkommen till Event*Sphere</h1>  <hr />
+        <img src="images/home.jpg" alt="Computer showing code" style="height:400px">
     </header>
     <main class="main-content">
 
@@ -80,10 +80,10 @@
             Vi arbetar sedan många år med att erbjuda moderna IT-stöd inom MES, SAP och CRM.<br />
             Vi har ett team med erfarna verksamhetskonsulter som arbetat inom området längre än 40 år, vilket gett oss en bred erfarenhet inom området.<br />
             Vi värdesätter riktigt långa kundrelationer och förblir en partner till kunden från projektstart och sedan över systemets hela livscykel.<br />
-            Vi finns på flera orter runt om i Sverige.<br /><br />
+            Vi finns på flera orter runt om i Sverige men även globalt.<br /><br />
 
-            EventSphere har sedan 2003 tagit fram egenutvecklad programvara med ett antal olika moduler för att på bästa sätt kunna hjälpa våra kunder inom<br /> IT-stöd.
-            Dessa moduler samlar vi under namnet EventSphere modules.
+            EventSphere har sedan 2009 tagit fram egenutvecklad programvara med ett antal olika program för att på bästa sätt kunna hjälpa våra kunder inom<br /> IT-stöd.
+            Dessa program samlar vi under namnet EventSphere programs.
         </p>
 
     </main>
